# sdcvalidatorRust

./: .rustfmt.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  publiccode.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: README.md
docs/api/: README.md
docs/guides/: getting-started.md
examples/: README.md
src/: lib.rs  main.rs
